// Copyright 2024 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.dbobject.v1;

import "google/protobuf/empty.proto";
import "teleport/dbobject/v1/dbobject.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/dbobject/v1;dbobjectv1";

// DatabaseObjectService provides methods to manage Teleport DatabaseObjects
service DatabaseObjectService {
  // GetDatabaseObject is used to query a database object resource by its name.
  //
  // This will return a NotFound error if the specified database object does not exist.
  rpc GetDatabaseObject(GetDatabaseObjectRequest) returns (DatabaseObject);

  // ListDatabaseObjects is used to query database objects.
  //
  // Follows the pagination semantics of
  // https://cloud.google.com/apis/design/standard_methods#list.
  rpc ListDatabaseObjects(ListDatabaseObjectsRequest) returns (ListDatabaseObjectsResponse);

  // CreateDatabaseObject is used to create a database object.
  //
  // This will return an error if a database object by that name already exists.
  rpc CreateDatabaseObject(CreateDatabaseObjectRequest) returns (DatabaseObject);

  // UpdateDatabaseObject is used to modify an existing database object.
  rpc UpdateDatabaseObject(UpdateDatabaseObjectRequest) returns (DatabaseObject);

  // UpsertDatabaseObject is used to create or replace an existing database object.
  //
  // Prefer using CreateDatabaseObject and UpdateDatabaseObject.
  rpc UpsertDatabaseObject(UpsertDatabaseObjectRequest) returns (DatabaseObject);

  // DeleteDatabaseObject is used to delete a specific database object.
  //
  // This will return a NotFound error if the specified database object does not exist.
  rpc DeleteDatabaseObject(DeleteDatabaseObjectRequest) returns (google.protobuf.Empty);
}

// The request for CreateDatabaseObject.
message CreateDatabaseObjectRequest {
  // The database object to create.
  DatabaseObject object = 1;
}

// The request for GetDatabaseObject.
message GetDatabaseObjectRequest {
  // The name of the database object to fetch.
  string name = 1;
}

// The request for ListDatabaseObjects.
message ListDatabaseObjectsRequest {
  // The maximum number of items to return.
  // The server may impose a different page size at its discretion.
  int32 page_size = 1;
  // The page_token is the next_page_token value returned from a previous List request, if any.
  string page_token = 2;
}

// The response for ListDatabaseObjects.
message ListDatabaseObjectsResponse {
  // The page of database objects that matched the request.
  repeated DatabaseObject objects = 1;
  // Token to retrieve the next page of results, or empty if there are no
  // more results in the list.
  string next_page_token = 2;
}

// The request for UpdateDatabaseObject.
message UpdateDatabaseObjectRequest {
  // The database object to replace.
  DatabaseObject object = 1;
}

// The request for UpsertDatabaseObject.
message UpsertDatabaseObjectRequest {
  // The database object to create or replace.
  DatabaseObject object = 1;
}

// The request for DeleteDatabaseObject.
message DeleteDatabaseObjectRequest {
  // The name of the database object to delete.
  string name = 1;
}
